--- a/Index_jingdong/views/index.jade
+++ b/Index_jingdong/views/index.jade
@@ -10,7 +10,7 @@ block content
       .navbar-header
         .wid.clearfix
           ul.nl
-            li.dropdown
+            li.dropdown.city-list
               .cw
                 i.cw-icon.fa.fa-map-marker
                 span 北京
@@ -56,7 +56,7 @@ block content
               input.s-text(type='text', value='')
               button.search-btn(type='submit')
                 i.fa.fa-search
-          .my-cart
+          .my-cart.dropdown
             .word-icon
               i.fa.fa-shopping-cart
               span 我的购物车
