--- a/Index_jingdong/views/service_huafei3.jade
+++ b/Index_jingdong/views/service_huafei3.jade
@@ -76,7 +76,7 @@ block content
               option(value='100') 100元
           dd
             span#priceRecharge.msg-price ￥98.0-￥100.0
-  script(src='../js/jquery-1.9.1.js')
+  script(src='https://cdn.bootcss.com/jquery/1.9.1/jquery.min.js')
   script(src='../js/jquery.mytabs-0.1.js')
   script(src='../js/jquery.days-0.1.js')
   script.
